--- a/src/style.css
+++ b/src/style.css
@@ -83,3 +83,13 @@
 .icon.gmail {
   background-image: url('/icon/gmail.svg');
 }
+
+@font-face {
+  font-family: 'Vazir';
+  src: url('/fonts/vazir-font-v16.1.0/Vazir.woff2') format('woff2'),
+       url('/fonts/vazir-font-v16.1.0/Vazir.woff') format('woff'),
+       url('/fonts/vazir-font-v16.1.0/Vazir.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
